# gongdb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RUN_BEAD_README.md  analyze_git_loc.py  analyze_tpcc_overhead.py  build_gongdb.py  codex_messages.txt  download_all_tests.sh  download_log.txt  extract_codex_messages.py  extract_tpcc_overhead.py  git_loc_history.csv  git_loc_history_early.csv  plot_loc_history.py  pyproject.toml  run_tpcc_regression.py  slides.py  tpcc_overhead.csv
.beads/: issues.jsonl
benches/: performance.rs
docs/: ARCHITECTURE.md  PROFILING.md
src/: ast.rs  engine.rs  lib.rs  main.rs  parser.rs  storage.rs
tests/: PHASE_TESTING.md  ast_select1.rs  example.slt  performance.rs  phase13_concurrency.rs  phase14_error_handling.rs  sqllogictest.rs  tpcc.rs  tpch.rs
tests/custom/: README.md  phase11_indexing.test  phase12_query_planning.test  phase13_transactions.test  phase2_storage_engine.test  phase3_type_system.test  recursive_cte.test
tests/sqlite/: README.md  select4_pre_compound.test
tpcc_regression_results_20260120_075310/: results.csv
