[package]
name = "gongdb"
version = "0.1.0"
edition = "2021"

[dependencies]
sqllogictest = "0.29"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
itertools = "0.12"
md-5 = "0.10"
regex = "1.10"

[dev-dependencies]
dhat = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
tpchgen = "2.0"

[[bench]]
name = "performance"
harness = false